--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -515,7 +515,6 @@
         <!--Stores Table View Controller-->
         <scene sceneID="so1-vg-58h">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Jq-dg-LCr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController storyboardIdentifier="StoresTable" id="npG-Wz-Ins" customClass="StoresTableViewController" customModule="Pantarevir" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" id="WCu-jM-qvX">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="496"/>
@@ -530,7 +529,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="89"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZdQ-N7-cMS" id="c6m-Ez-52G">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="88.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Butiksnamn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jca-Ql-QQm">
@@ -586,6 +585,7 @@
                         </connections>
                     </tableView>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Jq-dg-LCr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3008" y="-3072"/>
         </scene>
@@ -671,6 +671,7 @@
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OW3-FS-EwC">
                                 <rect key="frame" x="9" y="23" width="32" height="32"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="Km7-8q-fY6"/>
                                     <constraint firstAttribute="width" constant="32" id="luL-64-ulq"/>
                                 </constraints>
                                 <state key="normal" image="back_arrow_dropshadow copy">
@@ -683,8 +684,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="I1h-VO-hFM" firstAttribute="top" secondItem="OW3-FS-EwC" secondAttribute="bottom" constant="545" id="1sj-Og-5ge"/>
                             <constraint firstItem="6B9-FN-7F4" firstAttribute="bottom" secondItem="I1h-VO-hFM" secondAttribute="top" id="6OK-1N-8qQ"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="OW3-FS-EwC" secondAttribute="bottom" constant="-55" id="KV9-Jq-YOb"/>
                             <constraint firstItem="OW3-FS-EwC" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leadingMargin" constant="-11" id="MQ7-Hz-Y9a"/>
                             <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="FUd-mV-fh2" secondAttribute="top" id="csJ-pV-e3M"/>
                             <constraint firstAttribute="trailing" secondItem="6B9-FN-7F4" secondAttribute="trailing" id="e5R-Ug-gIJ"/>
@@ -869,6 +870,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="neD-h2-VXR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.1110576923" green="0.1110576923" blue="0.1110576923" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i0i-O2-Trd">
                                 <rect key="frame" x="0.0" y="106" width="600" height="494"/>
                                 <connections>
@@ -881,10 +886,6 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="neD-h2-VXR">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" red="0.1110576923" green="0.1110576923" blue="0.1110576923" alpha="1" colorSpace="calibratedRGB"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OyV-la-Bkn">
                                 <rect key="frame" x="10" y="24" width="26" height="26"/>
                                 <constraints>
